header z-index fix + main page add  id for sections

--- a/src/css/base/_layout.sass
+++ b/src/css/base/_layout.sass
@@ -21,6 +21,7 @@ body
 
   &__content
     flex: 1 0 auto
+    z-index: 1
 
   &__section
     overflow: hidden
